fixed item unavailable bug, spacing fixes to item view

--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -38,7 +38,7 @@
 }
 
 .itemView-c1-desc {
-  margin-bottom: 5vh;
+  margin-bottom: 30px;
 }
 
 .itemView-c1-text {
@@ -109,7 +109,7 @@
 }
 
 .itemView-reviews-header {
-  margin-top: 5vh;
+  margin: 30px 0px;
 }
 
 .itemView-item-measurements {
@@ -199,11 +199,6 @@
   color: black;
   font-weight: 500;
   font-family: 'Helvetiva Neue', sans-serif;
-}
-
-.itemView-reviews-header {
-  margin-top: 50px;
-  margin-bottom: 50px;
 }
 
 .itemView-review-name {
@@ -321,6 +316,27 @@
   .itemView-img {
     max-height: calc(80vh - 140px);
     object-fit: contain;
+  }
+}
+
+@media (max-height: 970px) {
+  .itemView-c1-desc {
+    margin-bottom: 10px;
+  }
+
+  .itemView-reviews-header {
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-height: 760px) {
+  .itemView-c1-desc {
+    margin-bottom: 10px;
+  }
+
+  .itemView-reviews-header {
+    margin-top: 10px;
   }
 }
 
